# src/controllers/game.controller.ts
@@ -1,4 +1,4 @@
-import {Body, Controller, Get, Path, Post, Route, Tags} from "tsoa";
+import {Body, Controller, Get, Patch, Path, Post, Route, Tags} from "tsoa";
 import { GameDTO } from "../dto/game.dto";
 import { gameService } from "../services/game.service";
 
@@ -21,5 +21,14 @@ export class GameController extends Controller {
   @Get("{id}")
   public async getGameById(@Path() id: number): Promise<GameDTO | null> {
     return gameService.getGameById(id);
+  }
+
+  @Patch("{id}")
+  public async updateGame(
+    @Path() id: number,
+    @Body() requestBody: GameDTO
+  ): Promise<GameDTO | null> {
+    const { title, console_id } = requestBody;
+    return gameService.updateGame(id, title, console_id);
   }
 }
